--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -46,31 +46,14 @@ body{
 .profile .name-container div span:first-child{
     padding-right: 20px;
 }
-.follow-container ul{
+.follow-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 100px;
-    padding: 0;
-    place-items: center;
-}
 
-.follow-container ul a{
-    text-decoration: none;
-    color: #000;
-    border: 1px solid rgb(226, 226, 226);
-    /* padding: 10px 30px; */
-    border-radius: 3px;
-    width: 160px;
-    line-height: 3em;
-    text-align: center;
 }
-.follow-container ul a.current{
-    background: #1976d2;
-    color: #fff;
-    border: none;
-}
-
-.follow-container ul a li{
-    list-style: none;
-
+.follow-container button{
+    max-height: 60px;
+    border: 1px solid rgb(196, 196, 196);
+    margin: 0 5px;
 }
