--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,59 +1,58 @@
-body{
+/*body{
     width: 980px;
     margin: auto;
+}*/
+.profile .profile-header {
+  /* border: 1px solid; */
+  display: grid;
+  grid-template-columns: 1.5fr 4fr 3fr;
 }
-.profile .profile-header{
-    /* border: 1px solid; */
-    display: grid;
-    grid-template-columns: 1.5fr 4fr 3fr;
-}
-.profile .profile-header div{
-    /* border: 1px solid; */
-}
-
-.profile .profile-header div.headshot-container{
-    /* border: 1px solid; */
-    height: 100px;
-    width: 100px;
-    overflow: hidden;
-    border-radius: 100%;
-    display: grid;
-    place-self: center;
-    margin-top: 75px;
+.profile .profile-header div {
+  /* border: 1px solid; */
 }
 
-.profile .profile-header div.headshot-container img{
-    height: 100px;
+.profile .profile-header div.headshot-container {
+  /* border: 1px solid; */
+  height: 100px;
+  width: 100px;
+  overflow: hidden;
+  border-radius: 100%;
+  display: grid;
+  place-self: center;
+  margin-top: 75px;
 }
 
-.profile .name-container{
-    /* margin-top: 50px; */
+.profile .profile-header div.headshot-container img {
+  height: 100px;
 }
 
-.profile .name-container h3{
-    margin: 85px 0 0;
-}
-.profile .name-container h6{
-    margin: 3px 0 15px;
-    color: rgb(145, 145, 145);
+.profile .name-container {
+  /* margin-top: 50px; */
 }
 
-.profile .name-container div{
-    font-size: .7em;
-    font-weight: bold;
+.profile .name-container h3 {
+  margin: 85px 0 0;
+}
+.profile .name-container h6 {
+  margin: 3px 0 15px;
+  color: rgb(145, 145, 145);
 }
 
-.profile .name-container div span:first-child{
-    padding-right: 20px;
+.profile .name-container div {
+  font-size: 0.7em;
+  font-weight: bold;
 }
-.follow-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-top: 100px;
 
+.profile .name-container div span:first-child {
+  padding-right: 20px;
 }
-.follow-container button{
-    max-height: 60px;
-    border: 1px solid rgb(196, 196, 196);
-    margin: 0 5px;
+.follow-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 100px;
+}
+.follow-container button {
+  max-height: 60px;
+  border: 1px solid rgb(196, 196, 196);
+  margin: 0 5px;
 }
