--- a/client/src/Styles/autosuggest.css
+++ b/client/src/Styles/autosuggest.css
@@ -4,7 +4,8 @@
 }
 
 .react-autosuggest__input {
-  width: 240px;
+  width: 80%;
+  max-width: 240px;
   height: 30px;
   padding: 5px 20px;
   font-family: Helvetica, sans-serif;
